v4 Read Throughput Perf improvement (#6694)
* improve Address Cache Physical address URI reconstruction

 * Physical addresses are constants, prior to this PR
   we used to parse physical address as string to URI on each request.
   This PR improves this.

* replace String.format with concatination to avoid regex cost

* SessionContainer ConcurrentHashMap lock contention improved

 * doing collectionResourceIdToSessionTokens.compute(collectionId, func)
   causes a contention for the active collectionId.
   This PR improves the contention lock

* uri to url conversion (parsing) back and force eliminated

 * Uri to url conversaion parsing eliminated.

* addressed review comments

* fix broken tests

* fix test